--- a/style.css
+++ b/style.css
@@ -12,6 +12,17 @@ html, body{
     overflow: hidden;
 }
 
+#cursor{
+    height: 2.6vw;
+    width: 2.6vw;
+    border: 1px solid #ffffffac;
+    border-radius: 50%;
+    mix-blend-mode: difference;
+    position: fixed;
+    z-index: 999;
+    transform: translate(-50%,-50%);
+}
+
 #loader{
     height: 100%;
     width: 100%;
@@ -125,4 +136,56 @@ html, body{
     width: 100%;
     height: 100vh;
     background: #151515;
+}
+
+#page1 #nav{
+    display: flex;
+    justify-content:space-between;
+    align-items:center;
+    padding: 3.5vw 5vw;
+}
+
+#nav-pt1{
+    width: 30%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+#nav-pt2{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 2vw;
+}
+
+#nav h4{
+    font-size: 1.1vw;
+    font-weight: 500;
+}
+
+.hero{
+    /* background: red; */
+    width: 60%;
+    margin-left: 27%;
+    height: fit-content;
+    overflow: hidden;
+}
+.hero:nth-child(2){
+    margin-top:15vh;
+}
+.hero h1{
+    font-size: 7vw;
+    text-transform: uppercase;
+    line-height: 7.5vw;
+}
+
+.hero .hero3{
+    text-decoration: underline;
+}
+
+.hero .hero3:hover{
+    -webkit-text-stroke: .5px white;
+    color: transparent;
+    font-weight: 400;
 }
